<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huawei.android.stbcontrollertool.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_message"
        android:id="@+id/inputMessage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputMessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputMessage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="49dp"
            tools:ignore="NotSibling">

            <Button
                android:text="@string/button_runService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/runService"
                tools:ignore="UnknownId"
                android:width="100dp"/>

            <Button
                android:text="@string/button_stopService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stopService"
                tools:ignore="RelativeOverlap,UnknownId"
                android:width="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <Button
            android:text="@string/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/publish"
            tools:ignore="RelativeOverlap,UnknownId"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:width="100dp"/>

        <Button
            android:text="@string/button_runShell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runShellCMD"
            tools:ignore="UnknownId"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:width="100dp"/>
    </RelativeLayout>

    <TextView
        android:text="@string/enter_showMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showMessage"
        android:lines="15"
        tools:ignore="UnknownId"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"/>

</RelativeLayout>
